# abbott-features

./: .copier-answers.yml  .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_and_test.yml
src/abbott_features/: __FRACTAL_MANIFEST__.json  __init__.py
src/abbott_features/dev/: task_list.py
src/abbott_features/dev/docs_info/: calculate_registration_quality.md  cellvoyager_time_decay.md  measure_colocalization_features.md  measure_distance_features.md  measure_features.md  measure_intensity_features.md  measure_label_features.md  z_decay.md
src/abbott_features/features/: _base.py  colocalization.py  constants.py  distance.py  feature_types.py  intensity.py  label.py  object_hierarchy.py  queries.py  types.py
src/abbott_features/features/neighborhood/: aggregation_functions.py  neighborhood.py  neighborhood_aggregation.py  neighborhood_matrix_parallel.pyx  neighborhoods.py
src/abbott_features/fractal_tasks/: cellvoyager_metadata.py  cellvoyager_time_decay.py  cycle_registration_quality.py  fractal_utils.py  image_based_registration_hcs_init.py  init_registration_quality_hcs.py  io_models.py  measure_colocalization_features.py  measure_distance_features.py  measure_features.py  measure_intensity_features.py  measure_label_features.py  polars_utils.py  z_decay.py
src/abbott_features/intensity_normalization/: models.py  outlier_ranges.py  plot_features.py  polars_preprocessing.py  polars_selector.py  polars_utils.py
tests/: __init__.py  conftest.py  test_measure_features.py  test_registration_quality.py  test_thresholding_label_task.py  test_time_decay.py  test_valid_args_schemas.py
tests/data/time_decay/c2/: MeasurementDetail.mrf
tests/data/time_decay/c3/: MeasurementDetail.mrf
