[build-system]
requires = ["setuptools>=61", "setuptools-scm", "numpy>=1.17,<2", "cython>=0.18", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["abbott_features"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.hatch.metadata]
allow-direct-references = true # remove once ngio-dev is integrated in ngio

# Project metadata (see https://peps.python.org/pep-0621)
[project]
name = "abbott-features"
dynamic = ["version"]
description = "Package description."
readme = "README.md"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Ruth Hornbachner", email = "ruth.hornbachner@uzh.ch" },
]

# Required Python version and dependencies
requires-python = ">=3.11"
dependencies = ["ngio @ git+https://github.com/rhornb/ngio.git@dev",
                "numpy<2",
                "polars",
                "scipy",
                "scikit-learn",
                "scikit-image",
                "spatial-image",
                "seaborn",
                "itk", 
                "strenum",
                "numba",
                "networkx[default]",
                "fractal-tasks-core",
                "fractal-task-tools",]

# Optional dependencies (e.g. for `pip install -e ".[dev]"`, see
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies)
[project.optional-dependencies]
dev = ["devtools", "hatch", "pytest", "requests", "jsonschema", "ruff", "pre-commit"]

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src"]

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "google" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D",    # pydocstyle
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TCH",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
extend-select = [
    "D417", # Missing argument descriptions in Docstrings
]
ignore = [
    "B008", # Do not perform function calls in argument defaults
    "D401", # First line should be in imperative mood (remove to opt in)
    "D415", # First line should end with a period (remove to opt in)
    "D101", # Missing docstring in public class (remove to opt in)
    "D102", # Missing docstring in public module (remove to opt in)
    "D103", # Missing docstring in public module (remove to opt in)
    "D105", # Missing docstring in magic method (remove to opt in)
    "D107", # Missing docstring in `__init__` (remove to opt in)


]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 89
skip-magic-trailing-comma = false  #// filepath: /Users/ruthh/Pelkmans/Fractal/abbott-features/pyproject.toml
